Refactoring, go back to this commit if doesn't works next implementation